# shroud

./: README.md
circuits/: main.circom  merkle.circom
circuits_circom/: main.circom  merkle.circom
circuits_rust/: Cargo.toml
circuits_rust/pkg/: circuits_rust.d.ts  circuits_rust.js  circuits_rust_bg.js  circuits_rust_bg.wasm  circuits_rust_bg.wasm.d.ts  package.json
circuits_rust/src/: lib.rs  main.rs  merkle_tree.rs  poseidon.rs
circuits_rust/src/circuit/: mod.rs
circuits_rust/src/wasm/: mod.rs
contracts/: Move.toml
contracts/sources/: btc.move  coin_diff.move  core.move  eth.move  fr.move  hasui.move  merkle.move  poseidon.move  router.move  shroud.move  suins.move  usdc.move  usdt.move  wal.move
contracts/tests/: core_tests.move  poseidon_test.move  shroud_tests.move
frontend/: .env.example  next.config.js  package.json  pnpm-lock.yaml  worker.ts
frontend/src/: env.mjs
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: faucet-button.tsx  internal-wallet-button.tsx  nav-bar.tsx  pool-balance-card.tsx  provider.tsx  tx-state-dialog.tsx  wallet-button.tsx  wallet-card.tsx
frontend/src/config/: contract.ts  currency.ts  site.ts
frontend/src/hooks/: use-active-protocol-account.tsx  use-deposit.tsx  use-internal-wallet.tsx  use-pool-balances.tsx  use-protocol-balances.tsx  use-prove.tsx  use-quote-out.tsx  use-swap.tsx  use-token-balances.tsx  use-token-prices.tsx  use-tx-state.tsx  use-withdraw.tsx  use-worker.tsx
frontend/src/lib/: formatter.ts  utils.ts
scripts/: deploy.ts  package.json  pnpm-lock.yaml
(+12 files in other folders)
