[package]
name = "circuits_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
ark-bn254 = "0.5.0"
ark-crypto-primitives = { version = "0.5.0", features = [
    "crh",
    "r1cs",
    "merkle_tree",
] }
ark-ff = "0.5.0"
ark-r1cs-std = "0.5.0"
ark-relations = "0.5.1"
ark-std = "0.5.0"
hex = "0.4.3"
