[package]
name = "circuits_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
ark-bn254 = "0.5.0"
ark-crypto-primitives = { version = "0.5.0", features = [
    "crh",
    "r1cs",
    "merkle_tree",
] }
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-r1cs-std = "0.5.0"
ark-relations = "0.5.1"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
console_error_panic_hook = "0.1.7"
hex = "0.4.3"
rand = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.140"
wasm-bindgen = "0.2.100"

[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"
